samples/errors/wrong_arity_few.lox
// Error: Wrong number of arguments (too few)
// expect: runtime error
fun f(a, b) { return a + b; }
f(1);
